use registers to implement routes (https://github.com/laser/sinatra-best-practices)

--- a/spec/rakefile
+++ b/spec/rakefile
@@ -1,3 +1,5 @@
+# Spec setup taken from http://recipes.sinatrarb.com/p/testing/minitest?#article
+
 require 'rake/testtask'
 
 Rake::TestTask.new do |t|
