--- a/rakefile
+++ b/rakefile
@@ -1,7 +1,8 @@
 # Spec setup taken from http://recipes.sinatrarb.com/p/testing/minitest?#article
-
 require 'rake/testtask'
 
 Rake::TestTask.new do |t|
-  t.pattern = './*_spec.rb'
+  t.pattern = './spec/*_spec.rb'
 end
+
+task default: :test
